--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -54,7 +54,7 @@
         {% endif %}
           <div class="col alphabet-buttons">
             {% for letter in alphabet %}
-            <a class="btn btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
+            <a class="btn-dope alphabet-button" href="/browse/?q={{ letter }}" id="alphabet-{{ letter }}">
               {% if letter == '0' %}
               <span>
                 #
