--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -6,10 +6,10 @@ dopepod
 
 {% block center-stage %}
 <div class="col" id="login">
-  <h4>
-    Search for and listen to thousands of free podcasts on dopepod
-  </h4>
   <div id="login-wrapper">
+    <h1>
+      Search for and listen to thousands of free podcasts on dopepod
+    </h1>
     <div class="tab-content">
       {% if view == 'signup' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
@@ -36,12 +36,12 @@ dopepod
                 <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope login-button">Log in</button>
+                <button type="submit" class="btn-dope login-button">Log in</button>
               </div>
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link login-toggle" href="/?view=password">
+                <a class="password-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -91,7 +91,7 @@ dopepod
                 <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope signup-button">Sign Up</button>
+                <button type="submit" class="btn-dope signup-button">Sign Up</button>
               </div>
             </div>
           </form>
@@ -108,7 +108,7 @@ dopepod
                 <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
-                <button class="btn btn-dope active password-button" type="submit">
+                <button class="btn-dope active password-button" type="submit">
                   Send
                 </button>
               </div>
@@ -155,12 +155,12 @@ dopepod
                 <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope login-button">Log in</button>
+                <button type="submit" class="btn-dope login-button">Log in</button>
               </div>
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link login-toggle" href="/?view=password">
+                <a class="password-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -190,7 +190,7 @@ dopepod
                 <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope signup-button">Sign up</button>
+                <button type="submit" class="btn-dope signup-button">Sign up</button>
               </div>
             </div>
           </form>
@@ -207,7 +207,7 @@ dopepod
                 <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
-                <button class="btn btn-dope active password-button" type="submit">
+                <button class="btn-dope active password-button" type="submit">
                   Send
                 </button>
               </div>
@@ -239,12 +239,12 @@ dopepod
                 <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope login-button">Log in</button>
+                <button type="submit" class="btn-dope login-button">Log in</button>
               </div>
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link login-toggle" href="/?view=password">
+                <a class="password-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -274,7 +274,7 @@ dopepod
                 <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope signup-button">Sign up</button>
+                <button type="submit" class="btn-dope signup-button">Sign up</button>
               </div>
             </div>
           </form>
@@ -301,7 +301,7 @@ dopepod
                 <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
-                <button class="btn btn-dope active password-button" type="submit">
+                <button class="btn-dope active password-button" type="submit">
                   Send
                 </button>
               </div>
@@ -333,12 +333,12 @@ dopepod
                 <input class="form-control login-field" type="password" name="password" placeholder="Password" required id="login-password">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope login-button">Log in</button>
+                <button type="submit" class="btn-dope login-button">Log in</button>
               </div>
             </div>
             <div class="form-row">
               <div class="col">
-                <a class="password-link login-toggle" href="/?view=password">
+                <a class="password-link" href="/?view=password">
                   Forgot Password?
                 </a>
               </div>
@@ -368,7 +368,7 @@ dopepod
                 <input class="form-control login-field" type="password" name="password2" placeholder="Password (again)" required="" id="signup-password2">
               </div>
               <div class="col-auto">
-                <button type="submit" class="btn btn-dope signup-button">Sign up</button>
+                <button type="submit" class="btn-dope signup-button">Sign up</button>
               </div>
             </div>
           </form>
@@ -385,7 +385,7 @@ dopepod
                 <input class="form-control login-field" id="forgot-email" type="email" name="email" size="30" placeholder="Email" required>
               </div>
               <div class="col-auto">
-                <button class="btn btn-dope active password-button" type="submit">
+                <button class="btn-dope active password-button" type="submit">
                   Send
                 </button>
               </div>
@@ -394,87 +394,89 @@ dopepod
         </div>
       {% endif %}
     </div>
-  </div>
-  <div class="nav" id="login-buttons" role="tablist">
-    {% if view == 'signup' %}
-      {% if request.is_ajax %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope active signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
+    <div class="nav" id="login-buttons" role="tablist">
+      {% if view == 'signup' %}
+        {% if request.is_ajax %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope active signup-link" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% else %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="/?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope active signup-link" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% endif %}
+      {% elif view == 'login' %}
+        {% if request.is_ajax %}
+          <a class="btn-dope active login-link" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% else %}
+          <a class="btn-dope active login-link" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% endif %}
+      {% elif view == 'password' %}
+        {% if request.is_ajax %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% else %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
+            Sign up
+          </a>
+        {% endif %}
       {% else %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="/?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope active signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
+        {% if request.is_ajax %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
+            Sign up
+          </a>
+        {% else %}
+          <a class="btn-dope login-link" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
+            Log in
+          </a>
+          <a class="btn-dope signup-link" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
+            Sign up
+          </a>
+        {% endif %}
       {% endif %}
-    {% elif view == 'login' %}
-      {% if request.is_ajax %}
-        <a class="btn btn-dope active login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
-      {% else %}
-        <a class="btn btn-dope active login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
-      {% endif %}
-    {% elif view == 'password' %}
-      {% if request.is_ajax %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
-      {% else %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="true">
-          Sign up
-        </a>
-      {% endif %}
-    {% else %}
-      {% if request.is_ajax %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="#tabs-login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="#tabs-signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
-          Sign up
-        </a>
-      {% else %}
-        <a class="btn btn-dope login-link login-toggle" id="login-tab" data-toggle="pill" href="?view=login" role="tab" aria-controls="tabs-login" aria-selected="false">
-          Log in
-        </a>
-        <a class="btn btn-dope signup-link login-toggle" id="signup-tab" data-toggle="pill" href="/?view=signup" role="tab" aria-controls="tabs-signup" aria-selected="false">
-          Sign up
-        </a>
-      {% endif %}
-    {% endif %}
-    <a class="d-none" id="password-tab" data-toggle="pill" href="#tabs-password" role="tab" aria-controls="tabs-password" aria-selected="false">
-    </a>
-  </div>
-  <a class="btn btn-dope btn-dope-social socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Sign in with Google">
-    <div class="social-button social-icon" id="google-icon">
-      {% if request.is_ajax %}
-        <i class='fab fa-google icon'></i>
-      {% else %}
-        G
-      {% endif %}
+      <a class="d-none" id="password-tab" data-toggle="pill" href="#tabs-password" role="tab" aria-controls="tabs-password" aria-selected="false">
+      </a>
     </div>
-    <div class="social-button">
-      Sign in with Google
+    <div id="social-buttons">
+      <a class="btn-dope btn-dope-social socialaccount_provider google social-link" href="/account/google/login/?process=login" title="Sign in with Google">
+        <div class="social-button social-icon" id="google-icon">
+          {% if request.is_ajax %}
+            <i class='fab fa-google icon'></i>
+          {% else %}
+            G
+          {% endif %}
+        </div>
+        <div class="social-button">
+          Sign in with Google
+        </div>
+      </a>
     </div>
-  </a>
+  </div>
 </div>
 {% endblock %}
