--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -32,9 +32,9 @@
         </td>
         <td>
           {% if episode.length %}
-          {{ episode.length }}
+            {{ episode.length }}
           {% else %}
-          N/A
+            N/A
           {% endif %}
         </td>
       </tr>
@@ -45,26 +45,25 @@
           {% else %}
             <div class="collapse more-collapse show" id="more-collapse{{ forloop.counter }}">
           {% endif %}
-            <div class="episode-more">
-              <span class="episode-summary">
-                {{ episode.summary }}
-              </span>
-              <div class="episode-buttons float-right">
-                <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
-                  {% csrf_token %}
-                  <input type="hidden" name="url" value="{{ episode.url }}">
-                  <input type="hidden" name="type" value="{{ episode.type }}">
-                  <input type="hidden" name="title" value="{{ episode.title }}">
-                  <input type="hidden" name="date" value="{{ episode.pubDate }}">
-                  <input type="hidden" name="podid" value="{{ podcast.podid }}">
-                  <button class="btn btn-dope active" type="submit">
-                    Play
-                  </button>
-                </form>
-                <a class="btn btn-dope active" href="{{ episode.url }}" title="Download" download>
-                  Download
-                </a>
-              </div>
+            <span class="episode-summary">
+              {{ episode.summary }}
+            </span>
+            <div class="episode-buttons">
+              <form class="play d-inline" action="{% url 'play' %}" method="POST" target="_blank">
+                {% csrf_token %}
+                <input type="hidden" name="url" value="{{ episode.url }}" />
+                <input type="hidden" name="type" value="{{ episode.type }}" />
+                <input type="hidden" name="title" value="{{ episode.title }}" />
+                <input type="hidden" name="date" value="{{ episode.pubDate }}" />
+                <input type="hidden" name="podid" value="{{ podcast.podid }}" />
+                <input type="hidden" name="length" value="{{ episode.length }}" />
+                <button class="btn-dope play-button active" type="submit">
+                  Play
+                </button>
+              </form>
+              <a class="btn-dope active" href="{{ episode.url }}" title="Download" download>
+                Download
+              </a>
             </div>
           </div>
         </td>
