--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -6,10 +6,10 @@
       <img class="img-fluid" src="//images.weserv.nl/?url={{ player.episode.parent.artworkUrl }}70x70bb.jpg&w=70&h=70&t=absolute" />
     </a>
     <div id="player-buttons">
-    <a class="btn btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
+    <a class="btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
       <i class="fas fa-minus-circle icon"></i>
     </a>
-    <a class="btn btn-dope player-button" id="player-close" href="#" aria-label="Close">
+    <a class="btn-dope player-button" id="player-close" href="#" aria-label="Close">
       <i class="fas fa-times-circle icon"></i>
     </a>
   </div>
