--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -7,7 +7,7 @@ settings
 {% block center-stage %}
 <div class="col" id="settings">
   <form id="settings-form" action="{% url 'settings' %}" method="POST">
-    <button type="submit" id="settings-save"class="btn btn-dope active">Save</button>
+    <button type="submit" id="settings-save"class="btn-dope active">Save</button>
     <h3>
       Settings
     </h3>
